<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/list_item_bg">

    <TextView
        android:id="@+id/tvStationName"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvStatus"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Update/Delete buttons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btnViewQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/viewQR"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/orange"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/orange"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>
